Commonwealth Starting Work

--- a/localisation/english/PB_Culture_l_english.yml
+++ b/localisation/english/PB_Culture_l_english.yml
@@ -241,6 +241,7 @@ PB_Culture_Cree_tt:0 "Cree"
 PB_Culture_Borealian_tt:0 "Borealian" 
 PB_Culture_Alaskan_tt:0 "Alaskan" 
 PB_Culture_American_tt:0 "American" 
+PB_Culture_Freedman_tt:0 "Freedman"
 
 # CARRIBEAN #
 
