--- a/localisation/english/PB_Modifiers_l_english.yml
+++ b/localisation/english/PB_Modifiers_l_english.yml
@@ -16,14 +16,15 @@ lb_acceptance:0 "Acceptance of Liberal Diplomacy"
 ss_acceptance:0 "Acceptance of State Socialist Diplomacy"
 jc_acceptance:0 "Acceptance of Jacobin Diplomacy"
 
-
+modifier_production_speed_farm_factor:0 "§YAgroponics Complex§! construction speed"
+modifier_production_speed_farm_factor_desc:0 "Modifies the speed of Agroponics Complex construction."
 modifier_production_speed_research_center_factor:0 "§YResearch Center§! construction speed"
-modifier_production_speed_research_center_factor_desc:0 "Modifies the speed of Research Center."
+modifier_production_speed_research_center_factor_desc:0 "Modifies the speed of Research Center construction."
 modifier_production_speed_tesla_tower_factor:0 "§YTesla Tower§! construction speed"
-modifier_production_speed_tesla_tower_factor_desc:0 "Modifies the speed of Tesla Tower."
+modifier_production_speed_tesla_tower_factor_desc:0 "Modifies the speed of Tesla Tower construction."
 modifier_production_speed_medical_center_factor:0 "§YMedical Center§! construction speed"
-modifier_production_speed_medical_center_factor_desc:0 "Modifies the speed of Medical Center."
+modifier_production_speed_medical_center_factor_desc:0 "Modifies the speed of Medical Center construction."
 modifier_production_speed_steel_mill_factor:0 "§YSteel Mill§! construction speed"
-modifier_production_speed_steel_mill_factor_desc:0 "Modifies the speed of Steel Mill."
+modifier_production_speed_steel_mill_factor_desc:0 "Modifies the speed of Steel Mill construction."
 modifier_production_speed_farm_mill_factor:0 "§YAgroponics Complex§! construction speed"
-modifier_production_speed_farm_mill_factor_desc:0 "Modifies the speed of Agroponics Complex."
+modifier_production_speed_farm_mill_factor_desc:0 "Modifies the speed of Agroponics Complex construction."
