--- a/localisation/english/PB_United_Commonwealth_l_english.yml
+++ b/localisation/english/PB_United_Commonwealth_l_english.yml
@@ -1,5 +1,7 @@
 ﻿l_english:
 
+
+
 ##########################
 # TOOLTIPS
 ##########################
@@ -28,6 +30,9 @@ PB_AME_Second_Empire_System_desc:0 "Legally speaking, the United Commonwealth of
 
 PB_AME_Crittenden_Compromise:0 "The Crittenden Compromise"
 PB_AME_Crittenden_Compromise_desc:0 "Following the end of the Southern Rebellion and the signing of the Calhoun-Melbourne Treaty, the Commonwealth was left with a divided, war-torn and militarily occupied South. The Southern Provinces would remain under de-facto military rule until 1838, whereupon new provincial borders were established under the Lincoln-Crittenden Proposal. This proposal was heavily favored by the Southern politicians allowed to run for office, as it sectioned off areas dominanted by free men of color from predominantly white regions.\n\nPolitically convenient at the time, the Crittenden Compromise severely divided the Southern provinces into what were functionally racial armed camps. Freedmen provinces and white provinces frequently engaged in battle, sometimes politically, sometimes literally for influence over the South. In contemporary times, the situation has lead to a series of conflicting segregation and anti-segregation laws across the country. In some extreme cases, Freedmen who could vote in one neighborhood would be arrested for trying to vote in another across the provincial line.\n\nResolving or even just mitigating the situation is exacerbated by the vigiliant gaze of New Dixie and the Southern Secessionists, just waiting for us to act and incite rebellion."
+PB_AME_Crittenden_Compromised:0 "Crittenden Compromised"
+PB_AME_Crittenden_Compromised_desc:0 "Following the end of the Southern Rebellion and the signing of the Calhoun-Melbourne Treaty, the Commonwealth was left with a divided, war-torn and militarily occupied South. The Southern Provinces would remain under de-facto military rule until 1838, whereupon new provincial borders were established under the Lincoln-Crittenden Proposal. This proposal was heavily favored by the Southern politicians allowed to run for office, as it sectioned off areas dominanted by free men of color from predominantly white regions.\n\nPolitically convenient at the time, the Crittenden Compromise severely divided the Southern provinces into what were functionally racial armed camps. Freedmen provinces and white provinces frequently engaged in battle, sometimes politically, sometimes literally for influence over the South. In contemporary times, the situation has lead to a series of conflicting segregation and anti-segregation laws across the country. In some extreme cases, Freedmen who could vote in one neighborhood would be arrested for trying to vote in another across the provincial line.\n\nResolving or even just mitigating the situation is exacerbated by the vigiliant gaze of New Dixie and the Southern Secessionists, just waiting for us to act and incite rebellion."
+
 AME_Crittenden_Compromise_tt:0 "§YWhile this national spirit is active, we will be unable to change our§! §OMinority Rights§! §Ylaws without major pushback from either§! §OFreedmen Culture States§! §Yor§! §OOld Dixie Culture States§!"
 
 PB_AME_Mississippi_Treaties:0 "The Calhoun-Melbourne Treaty"
@@ -41,6 +46,7 @@ PB_AME_Dixie_Divide_desc:0 "In many ways, America remains deeply divided between
 PB_AME_Racial_Segregation:0 "Racial Segregation"
 PB_AME_Racial_Segregation_desc:0 "Despite the emancipation of slaves in the 1800s, the Commonwealth still maintains many segregation laws, even in the North. Due to this, the Commonwealth’s Home Army similarly remains segregated, making recruiting difficult."
 
+PB_AME_Dixie_Development:0 "The Dixie Development Plan"
 
 PB_AME_Protectionist_Recovery_1:0 "Gradual Recovery from the Crisis"
 PB_AME_Protectionist_Recovery_2:0 "Gradual Recovery from the Crisis"
@@ -78,7 +84,7 @@ PB_AME_Develop_the_Seminole_Province:0 "Develop the Seminole Provinces"
 PB_AME_Native_Electrification_Bureau:0 "Establish the NEB"
 PB_AME_Concessions_to_White_Provinces:0 "Concede to White Provinces"
 PB_AME_Concessions_to_Coloured_Provinces:0 "Reach out to Coloured Provinces"
-PB_AME_Encourage_Linconia_Immigration:0 "Encourage Linconia Immigration"
+PB_AME_Encourage_Linconia_Immigration:0 "Offer Marooner Recognition"
 PB_AME_Carte_Blanche_for_the_White_Belt:0 "Carte Blanche for the White Belt"
 PB_AME_Expand_the_Coloured_Brigade_Program:0 "Increase Coloured Brigade Funding"
 PB_AME_Repatriate_White_League_Prisoners:0 "Repatriate White League Prisoners"
@@ -505,10 +511,58 @@ Unicom.6.t:0 "The American Legion Arrives in Philadelphia"
 Unicom.6.d:0 "PLACEHOLDER The American Legion delegation has arrived in Philadelphia, but with significant reinforcement. Nearly 20,000 demonstrators have flooded into the capital to support the delegation. While they generally aren't well armed, the RAMP have noted that many have significant wartime augmentation that could pose a threat to the public. Coolidge, now surrounded in his own country's capital by thousands of unemployed and angry veterans, now has to decide how to address the crisis. Routing the protestors would be deeply unpopular, but with the right media spin could be portrayed as defeating troublemakers. On the other hand, capitulation would make Coolidge look weak to the public and the Empire, and the UC may not be able to effectively foot the bill required. The third option, to negotiate, may be the best path for preventing bloodshed, but will require some compromises on both sides. "
 Unicom.6.a:0 "A decision must be made, and soon."
 
+Unicom.7.t:0 "Addressing the Ministry of Indian Affairs"
+Unicom.7.d:0 ""
+Unicom.7.a:0 "We should maintain the current bi-lingual curriculum"
+Unicom.7.b:0 "Discourage Indian languages in favor of English"
+
+Unicom.8.t:0 "Seminole Ministers protest policy changes"
+Unicom.8.d:0 ""
+Unicom.8.a:0 "Perhaps we can make some exceptions..."
+Unicom.8.b:0 "No special treatment, period."
+
+Unicom.9.t:0 "Offering Concessions to Dixie"
+Unicom.9.d:0 ""
+Unicom.9.a:0 "Better a deal with the devil than nothing at all."
+
+Unicom.10.t:0 "Offering Concessions to the Freedmen"
+Unicom.10.d:0 ""
+Unicom.10.a:0 "Let's keep things civil down south."
+
+Unicom.11.t:0 "Freedmen Provinces protest Changes"
+Unicom.11.d:0 ""
+Unicom.11.a:0 "I don't see how that's our problem."
+
+Unicom.12.t:0 "Southerners Provinces protest Changes"
+Unicom.12.d:0 ""
+Unicom.12.a:0 "If you don't like it, the border's right there."
+
+Unicom.13.t:0 "Recognizing the Marooners"
+Unicom.13.d:0 ""
+Unicom.13.a:0 "We don't need to support them as long as it annoys Dixie"
+
+Unicom.14.t:0 "Repatriating Dixie's Insurrectionists"
+Unicom.14.d:0 ""
+Unicom.14.a:0 "Just get them out of our borders"
+Unicom.14.b:0 "Tit for tat, offer a prisoner exchange"
+Unicom.14.c:0 "On second thought, Nicaragua is nice this time of year..."
+
+Unicom.15.t:0 "Philadelphia offers a Prisoner Exchange"
+Unicom.15.d:0 ""
+Unicom.15.a:0 "Might as well take what we can get."
+Unicom.15.b:0 "Are you serious? No."
+
+Unicom.16.t:0 "New Dixie agrees to the Exchange"
+Unicom.16.d:0 ""
+Unicom.16.a:0 "Surprising, but not unwelcome."
+
+Unicom.17.t:0 "New Dixie refuses the Exchange"
+Unicom.17.d:0 ""
+Unicom.17.a:0 "Yeah, well, we wanted to keep them anyway."
+
 ##########################
 # TOOLTIPS
 ##########################
-
 POLITICS_CHARLES_G_DAWES_DESC:0 "§YBorn§!: 27/8/1865 \n\n§YCharles Gates Dawes§! is build by a family of businessmen, politicians and officers. His father, Rufus Dawes, fought against the Dixie threat during the Southern Rebellion, while his brothers, one by one, turned themselves into profitable men of capital. Dawes followed in their footsteps by establishing the Ohio Gas and Coke Company and making a big name for himself during the Great War during the Iberian Campaign. Eventually, Dawes entered politics during a time where the Federal Unionist Party saw serious defeats against the Progress Party. \n\nFrom 1922 till 1929, Dawes made a name for himself inside the party by becoming the minister of parliament for the province of Ohio, beating the local branch of the Progress Party of Ohio for the first time in two decades. During the 1929 nominations for FUP leadership, Dawes was able to beat out John D. Rockefeller by a narrow margin and headed the FUP for an amazing victory in the parliamentary election, allowing the FUP to form a tense coalition with the Progress Party. The unlikely coalition became reality due to the surprising growth of the CCP and Social Credit Party. Under Dawes, the FUP-Progress coalition has endured, with the prime minister able to juggle the balls of such a divided government."
 
 PB_AME_START_TT_1:0 "§YThe Dawes administration has been consistently troubled by the uppity coloured provinces since the start. If we seek to placate a certain electorate down in the South, the Dawes ministry will have to double down on segregation and protect the provincial autonomy to keep blacks and whites seperate§!."
@@ -528,6 +582,15 @@ AME_PB_AME_Gradual_Bonus_Rollout_3_tt:0 "\nIf none of the §HOther Conditions§!
 AME_PB_AME_Gradual_Bonus_Rollout_4_tt:0 "\nYou currently meet the §HConditions§! for the following Bonus Brigade cost:"
 
 AME_Spacing_tt:0 "  \n"
+
+PB_Coloured_Brigade_Program_tt:0 "§YWe will gain three Special Colored Regiment divisions from the Freedmen Provinces§!"
+
+local_unrest:0 "Local Unrest"
+increased_local_autonomy:0 "Increased Provincial Autonomy"
+racial_violence:0 "Racial Violence"
+significant_racial_violence:0 "Significant Racial Violence"
+AME_supports_the_government:0 "Province Supports the Government"
+AME_does_not_the_government:0 "Province does not Support the Government"
 
 
 ##########################
