--- a/localisation/english/state_names_l_english.yml
+++ b/localisation/english/state_names_l_english.yml
@@ -364,11 +364,11 @@
  STATE_363:0 "Albemarle"
  STATE_364:0 "Claredon"
  STATE_365:0 "Georgia"
- STATE_366:0 "East Florida"
+ STATE_366:0 "Seminolia"
  STATE_367:0 "West Florida"
- STATE_368:0 "Cherokee"
+ STATE_368:0 "Taliaferro"
  STATE_369:0 "Kentucky"
- STATE_370:0 "Mississippi"
+ STATE_370:0 "Bailey"
  STATE_371:0 "Louisiane"
  STATE_372:0 "Arcansas"
  STATE_373:0 "Jackson"
