--- a/localisation/english/PB_SCA_l_english.yml
+++ b/localisation/english/PB_SCA_l_english.yml
@@ -1185,6 +1185,12 @@
   SCA29opta:0 "We own these lands now."
   SCA29optb:0 "Establish a loyal revolutionary regime."
 
+  SCA30title:0 "The Sante Fe Occupation Question"
+  SCA30desc:0 "" 
+  SCA30opta:0 "We own these lands now."
+  SCA30optb:0 "Establish a loyal revolutionary regime."
+  SCA30optc:0 "Establish a loyal revolutionary regime and give them Apacheria."
+
   ##########################
   # PUPPETS/AUTONOMIES
   ##########################
@@ -1218,6 +1224,10 @@
   TEX_SCA_Puppet:0 "Texan People's United Republic"
   TEX_SCA_Puppet_DEF:0 "the Texan People's United Republic"
   TEX_SCA_Puppet_ADJ:0 "Texan"
+
+  SFE_SCA_Puppet:0 "Sante Fe People's United Republic"
+  SFE_SCA_Puppet_DEF:0 "the Sante Fe People's United Republic"
+  SFE_SCA_Puppet_ADJ:0 "Nortemexicano"
 
 
 
