--- a/localisation/english/PB_SCA_l_english.yml
+++ b/localisation/english/PB_SCA_l_english.yml
@@ -217,11 +217,11 @@
   SCA_Degeneracy_Two:0 "§ROne§!"
   SCA_Degeneracy_One:0 "§GZero§!"
   PB_SCA_Deg_Icon_tt:0 "Our Current Degeneracy Tier is [get_PB_SCA_Deg]\n\n[get_PB_SCA_Deg_tt]"
-  SCA_Degeneracy_Six_tt:0 "At Tier §RFive§!:\n  - (Army Organisation Factor: §R-0.25%§!, Max Planning Factor: §R-0.30%§!, Surrender Limit: §R-0.50%§!, Likely Hood of Degeneracy Events Firing: §RVery High§!)."
-  SCA_Degeneracy_Five_tt:0 "At Tier §RFour§!:\n  - (Army Organisation Factor: §R-0.20%§!, Max Planning Factor: §R-0.25%§!, Surrender Limit: §R-0.40%§!, Likely Hood of Degeneracy Events Firing: §RHigh§!)"
-  SCA_Degeneracy_Four_tt:0 "At Tier §RThree§!:\n  - (Army Organisation Factor: §R-0.15%§!, Max Planning Factor: §R-0.20%§!, Surrender Limit: §R-0.30%§!, Likely Hood of Degeneracy Events Firing: §RAverage§!)."
-  SCA_Degeneracy_Three_tt:0 "At Tier §RTwo§!:\n  - (Army Organisation Factor: §R-0.10%§!, Max Planning Factor: §R-0.15%§!, Surrender Limit: §R-0.20%§!, Likely Hood of Degeneracy Events Firing: §RLow§!)"
-  SCA_Degeneracy_Two_tt:0 "At Tier §ROne§!:\n  - (Army Organisation Factor: §R-0.05%§!, Max Planning Factor: §R-0.10%§!, Surrender Limit: §R-0.10%§!, Likely Hood of Degeneracy Events Firing: §RVery Low§!)."
+  SCA_Degeneracy_Six_tt:0 "At Tier §RFive§!:\n  - (Army Organisation Factor: §R-0.25%§!, Max Planning Factor: §R-0.30%§!, Surrender Limit: §R-0.50%§!)."
+  SCA_Degeneracy_Five_tt:0 "At Tier §RFour§!:\n  - (Army Organisation Factor: §R-0.20%§!, Max Planning Factor: §R-0.25%§!, Surrender Limit: §R-0.40%§!)."
+  SCA_Degeneracy_Four_tt:0 "At Tier §RThree§!:\n  - (Army Organisation Factor: §R-0.15%§!, Max Planning Factor: §R-0.20%§!, Surrender Limit: §R-0.30%§!)."
+  SCA_Degeneracy_Three_tt:0 "At Tier §RTwo§!:\n  - (Army Organisation Factor: §R-0.10%§!, Max Planning Factor: §R-0.15%§!, Surrender Limit: §R-0.20%§!)."
+  SCA_Degeneracy_Two_tt:0 "At Tier §ROne§!:\n  - (Army Organisation Factor: §R-0.05%§!, Max Planning Factor: §R-0.10%§!, Surrender Limit: §R-0.10%§!)."
   SCA_Degeneracy_One_tt:0 "At Tier §GZero§!:\n  - (All debuffs are removed and the Degeneracy Mechanic will end)."
   SCA_Reinvigorate_The_Soul:0 "Reinvigorate The Soul"
   SCA_Reinvigorate_The_Soul_tt:0 "Allows for the removal of the §RTraumatized By The Trek§! trait"
@@ -848,7 +848,6 @@
 
   SCA_The_Capital_Question:0 "The Capital Question"
   SCA_The_Capital_Question_desc:0 ""
-  
 
   ##########################
   # TOOLTIPS/FLAGS/COSMETIC/TRAITS/PARTIES
@@ -1028,6 +1027,12 @@
   SCA_President_Portrait_2:0 "Gus Hall:\n--------------------------------\n\n\n\n\n\n\n£GFX_SCA_Gus_Hall\n\n\n\n\n\n\n\n--------------------------------"
   SCA_President_Portrait_3:0 "William Foster:\n--------------------------------\n\n\n\n\n\n\n£GFX_SCA_William_Foster\n\n\n\n\n\n\n\n--------------------------------"
 
+  SCA_beigeBoy_Event_Loc:0 "This event was written by a member of the Pax Discord: §HbeigeBoy§!"
+
+  SCA_VL2291_Event_Loc:0 "This event was written by a member of the Pax Discord: §HVL2291§!"
+
+  SCA_Necrosint_Event_Loc:0 "This event was written by a member of the Pax Discord: §HNecrosint§!"
+
   ##########################
   # TECH
   ##########################
@@ -1190,6 +1195,30 @@
   SCA30opta:0 "We own these lands now."
   SCA30optb:0 "Establish a loyal revolutionary regime."
   SCA30optc:0 "Establish a loyal revolutionary regime and give them Apacheria."
+
+  SCA32title:0 "A Revolutionary’s Guide to Warfare Page 9, Chapter 3: Fighting a Superior Foe"
+  SCA32desc:0 "When facing seemingly impossible odds the revolutionary must not be disheartened. His enemy, though numerous in men and firepower, is still weak. A well placed blow will easily dismantle the solid-looking structure, like a house removed its foundations. The revolutionary must, then, use his small numbers in his own favour. Where trucks and trains cannot travel, he hides, living in the forested valleys and rugged terrain. His small numbers mean his diet can be sustained easily by remaining rations and wild game. Then, when the moment arises, he leaves his stronghold to engage with his foes below. Never directly attacking, he picks off his enemies at a distance. A sniper takes out a lone patrolman, a trapper cripples a scout: the revolutionary fighter must take the mindset he is hunting and stalking his enemy like he would any other animal, as he slowly withers their forces away through constant battles of attrition." 
+  SCA32opta:0 "A handy guide"
+
+  SCA33title:0 "The Last Man in Chinatown"
+  SCA33desc:0 "The streets looked snowed over with the amount of ash that coated them. Hardly a house was left standing in the district, save for old Uncle Ho’s. The old Uncle stayed deep inside the building, buried underneath bags of sand and clutching his ancient rifle to his chest. They would come again, he knew. The reds would come again. Taking careful aim, Uncle Ho scoped over the boulevard. Everyone else had since left, even the animals seemed to avoid the place now. What a change a small while made; the first time the reds came to town the townspeople welcomed them, gave them food and warmth, and tended to their sick and dying. Back then the town was still lively, bustling with the shouts of shopkeepers and cries of horses. But then the shops were “liberated”, the horses “requisitioned” and the people “resettled”. But not Uncle Ho. Uncle Ho remained." 
+  SCA33opta:0 "”Let the reds come”, he said. “I’ll be ready for them.”"
+
+  SCA34title:0 "Opium, Alcohol and Other Vices"
+  SCA34desc:0 "Capitalist slavery comes in many forms, from physical slavery with chains and locks, to the financial with debts and loans. Another method of capitalist control less mentioned, but still instrumental in their continued oppression of the working classes, is the slavery of consumsion. These dirty luxuries of pornography, gambling, drink, and drugs keep the working man docile and easily controllable, unwilling to rebel if it means his illusionary prosperity would be disrupted or his addictions cut off. It is for this reason that these vices must be eliminated, to complete the social revolution and completely free the working classes from their chains. Effective immediately, all bars will be closed and transformed into “worker’s clubs”. All non-industrial alcohol will be seized and destroyed. Only a wholesome and revolutionary worker’s culture will be permitted to exist in these places. Then following, drug dens and brothels will be similarly closed and the clientele arrested. There will be no tolerance for any resistance." 
+  SCA34opta:0 "These poisons must be flushed away, for good."
+
+  SCA35title:0 "A Letter To Home"
+  SCA35desc:0 "Dear mother,\n\nI hope you're doing well. I am certainly not. None of us are. Corpses trail behind us like breadcrumbs. I've not had anything to eat in a couple days. Even then, it was just a bowl of beet soup. But it tasted heavenly, compared to what else we've had to eat out here. The commissar kept speaking of how we had to forge on, and in the end, our suffering would be worth it. He collapsed from the cold of a snowstorm. We didn't watch it happen, for we had to keep moving lest we suffer the same fate, but the last time I heard him was when he screamed, mauled to death by wolves shortly after. I want to come home. To you. To father. To all my friends. But I'm too far gone now. I can't come home. I'd be shot as soon as the authorities saw me. This may be my last letter to you, if you even receive it. If you don't hear from me in three weeks, I'm dead. But don't weep for me. I'll be somewhere better. \n\nLove,\nJames" 
+  SCA35opta:0 "Where all the roads have ended, the path we walk has not."
+
+  SCA36title:0 "A Letter In Dust"
+  SCA36desc:0 "To all those who it may conceingn:\n\nWe are aware of the increasing number of celestials coming into the city from the south and are doing everything to solve this situation.\n\nThe celestials who were questioned said that the country of Meizhou was taken over by refugees from the east, which caused the local population to flee north.\n\nI have ordered a construction of a special district for chinese families in the outskirts of the city to resolve the issue without disturbing the New Virginian way of life.\n\nAdditionally, I have asked the government to investigate these so-called "refugees from the east" to find out their motives and identity. We will update you as soon as the investigation is concluded.\n\nSincerely, Mayor of New Virginia" 
+  SCA36opta:0 "Where all the roads have ended, the path we walk has not."
+
+  SCA37title:0 "A Bottle A Day"
+  SCA37desc:0 "Even though Jacob was warned of the potentially life-threatening effects of his alcoholism by his brother, any hope of pulling the man away from a bottle of rum was seemingly impossible. Every day at around late noon Jacob would disappear into the local saloon for hours only to remerge barely functional, a walking corpse with a belly full of beer. Only on a few occasions did he spare the time to take a break from the poison that was ruining his life, although the where abouts of Jacob during such times remained a mystery until one early Sunday morning. Down a busy street amongst the foolery of Continental troops returning from battle could one see Jacob, passing a few notes to a munitions guard in return for an unknown object. It would later be revealed that Jacob had, by some way, managed to obtain a barely conceivable image of his family back in Philadelphia. What strings Jacob had to pull just to get such an object through the United Commonwealth, let alone in Continental hands has been left up to speculation. Unfortunately, a few days later Jacob had committed suicide after finding out from Continental troops stationed within the town that both his wife and two daughters hadn’t made it through the chaos of the trek west, and that more than likely they had died during the Mississippi river crossing. " 
+  SCA37opta:0 "Keeps the doctor away."
 
   ##########################
   # PUPPETS/AUTONOMIES
