--- a/localisation/english/PB_SCA_l_english.yml
+++ b/localisation/english/PB_SCA_l_english.yml
@@ -96,6 +96,17 @@
 
   PB_SCA_Second_American_Revolution:0 "Second American Revolution"
 
+  SCA_Milestone_1:0 "Milestone Reward"
+  SCA_Milestone_2:0 "Milestone Reward"
+  SCA_Milestone_3:0 "Milestone Reward"
+  SCA_Milestone_4:0 "Milestone Reward"
+  SCA_Milestone_5:0 "Milestone Reward"
+  SCA_Milestone_6:0 "Milestone Reward"
+
+  PB_SCA_Low_Popular_Support:0 "Low Popular Support"
+  PB_SCA_Average_Popular_Support:0 "Average Popular Support"
+  PB_SCA_High_Popular_Support:0 "High Popular Support"
+
   ##########################
   # TECHNICAL TEAMS
   ##########################
@@ -115,6 +126,22 @@
   PB_SCA_Imperial_Tula_Arms_Plant:0 "Imperial Tula Arms Plant"
   PB_Imperial_Tula_Arms_Plant:0 "Arms Plant"
   PB_Imperial_Tula_Arms_Plant_desc:0 ""
+
+  PB_SCA_Continental_Shipyards:0 "Continental Shipyards"
+  PB_Continental_Shipyards:0 "Continental Shipyards"
+  PB_Continental_Shipyards_desc:0 ""
+
+  PB_SCA_Melbourne_Medical:0 "Melbourne Medical"
+  PB_Melbourne_Medical:0 "Melbourne Medical"
+  PB_Melbourne_Medical_desc:0 ""
+
+  PB_SCA_Continental_Trucking:0 "Continental Trucking"
+  PB_Continental_Trucking:0 "Continental Trucking"
+  PB_Continental_Trucking_desc:0 ""
+
+  PB_SCA_Boston_Industries:0 "Boston Industries"
+  PB_Boston_Industries:0 "Boston Industries"
+  PB_Boston_Industries_desc:0 ""
 
   ##########################
   # DECISIONS/MISSIONS/DEBUG
@@ -318,7 +345,7 @@
   ## President For life
 
   PB_SCA_President_For_Life:0 "President For Life"
-  PB_SCA_President_For_Life_desc:0 "\n\n\n\n\n\nButler has declared himself President for life. While this has come as a shock to some most have openly welcomed this fact. While Congress will still play a role in the affairs of the state Butler's word is to remain final. But despite this clear violation of revolutionary democracy other things demand both the attention of Butler and the American people.\n\nMilestones:\nBy completing specific milestones set out by Butler we will gain character and nation orientated bonuses. Hover over each Milestone to see the conditions that need to be met to obtain that specific Milestones Reward.\n\n\n\n"
+  PB_SCA_President_For_Life_desc:0 "\n\n\n\n\n\nButler has declared himself President for life. While this has come as a shock to some most have openly welcomed this fact. While Congress will still play a role in the affairs of the state Butler's word is to remain final. But despite this clear violation of revolutionary democracy other things demand both the attention of Butler and the American people.\n\nMilestones:\nBy completing specific milestones set out by Butler we will gain nation orientated bonuses. Hover over each Milestone to see the conditions that need to be met to obtain that specific Milestones Reward. A decision will become available once the conditions are met for any milestone.\n\n\n\n"
   SCA_Search_For_Oil:0 "Search For Oil"
   SCA_The_Alaska_Purchase_tt:0 "\n§HRussia§! must agree to our demands for the following £GFX_decision_icon_small decision to unlock:\n"
   SCA_A_Pragmatic_Alliance_tt:0 "\n§HJapan§! must agree to our demands for the following £GFX_decision_icon_small decision to unlock:\n"
@@ -330,6 +357,17 @@
   SCA_Demand_The_Miskito_Coast:0 "Demand The Miskito Coast"
   SCA_The_Pacific_Springboard:0 "The Pacific Springboard"
   SCA_Starve_The_Imperialist_Pigs:0 "Starve The Imperialist Pigs"
+
+  SCA_Milestones_1:0 "Industrial Expansion"
+  SCA_Milestones_2:0 "Military Modernization"
+  SCA_Milestones_3:0 "Military Expansion"
+  SCA_Milestones_4:0 "Stability Focus"
+  SCA_Milestones_5:0 "Equipment Reserves"
+  SCA_Milestones_6:0 "Naval Dominance"
+  SCA_Milestones_7:0 "Oil Reserves"
+  SCA_Milestones_8:0 "Aerial Modernization"
+  SCA_Milestones_9:0 "International Relations"
+  SCA_Milestones_10:0 "Nuclear Pursuits"
 
   SCA_Milestone_Text_1_tt:0 "[get_PB_SCA_Mil_1]"
   SCA_MIL_1_Block:0 "Industrial Expansion:\n\n£GFX_trigger_no  Number of Factories £GFX_civ_factory: > §H100§!\n\nThe state demands a greater increase of industrial might if we are to stand on our own two feet against those that wish to inflict harm against out state.\n\nReward: Max Factories in a State: §G+5%§!"
@@ -367,8 +405,8 @@
   SCA_MIL_7_Complete:0 "You have completed this Milestone.\n\nReward: Resource Gain Efficiency: §G+10.00%§!"
 
   SCA_Milestone_Text_8_tt:0 "[get_PB_SCA_Mil_8]"
-  SCA_MIL_8_Block:0 "Aerial Modernization:\n\n£GFX_trigger_no  Has air experience £GFX_air_experience: > §H50§!\n\nYou must of finished the §YPrevious Milestone§!.\n\nThe world has become increasingly aware of the advantages a dedicated airforce provides. It would be unwise of us to neglect such a fact.\n\nReward: Air Superiority: §G+10.00%§G!"
-  SCA_MIL_8_Unlock:0 "Aerial Modernization:\n\n£GFX_trigger_yes  Has air experience £GFX_air_experience: > §H50§!\n\nYou must of finished the §YPrevious Milestone§!.\n\nThe world has become increasingly aware of the advantages a dedicated airforce provides. It would be unwise of us to neglect such a fact.\n\nReward: Air Superiority: §G+10.00%§G!\n\n§YClick the respective decision to gain the reward.§!"
+  SCA_MIL_8_Block:0 "Aerial Modernization:\n\n£GFX_trigger_no  Has air experience £GFX_air_experience: > §H50§!\n\nYou must of finished the §YPrevious Milestone§!.\n\nThe world has become increasingly aware of the advantages a dedicated airforce provides. It would be unwise of us to neglect such a fact.\n\nReward: Air Superiority: §G+10.00%§!"
+  SCA_MIL_8_Unlock:0 "Aerial Modernization:\n\n£GFX_trigger_yes  Has air experience £GFX_air_experience: > §H50§!\n\nYou must of finished the §YPrevious Milestone§!.\n\nThe world has become increasingly aware of the advantages a dedicated airforce provides. It would be unwise of us to neglect such a fact.\n\nReward: Air Superiority: §G+10.00%§!\n\n§YClick the respective decision to gain the reward.§!"
   SCA_MIL_8_Complete:0 "You have completed this Milestone.\n\nReward: Air Superiority: §G+10.00%§G!"
 
   SCA_Milestone_Text_9_tt:0 "[get_PB_SCA_Mil_9]"
@@ -1053,6 +1091,8 @@
 
   SCA_The_New_America_Campaign_tt:0 "\nThe £GFX_industry_texticon  §RIndustrial Damage§! state modifier will now tick down to removal in §Y400§! days\n\nModify §YIndustrial Damage§! by\nLocal Resources: §G+15%§!\nLocal Factories: §G+15%§!"
   
+  SCA_The_New_America_Campaign_2_tt:0 "\nThe following new national §HTech Teams§! will unlock and replace any assigned foreign tech teams:\n\n"
+
   SCA_Dealt_With_Seperatists:0 "Dealt with the Maritime Seperatists"
 
   SCA_Crush_The_Maritime_Seperatists_tt:0 "\nWe will be able to £GFX_territory_icon core  [MIT.getflag] Maritime owned states once we have defeated them"
