--- a/localisation/english/PB_SCA_l_english.yml
+++ b/localisation/english/PB_SCA_l_english.yml
@@ -1349,6 +1349,10 @@
   SFE_SCA_Puppet_DEF:0 "the Sante Fe People's United Republic"
   SFE_SCA_Puppet_ADJ:0 "Nortemexicano"
 
+  CAL_SCA_Puppet:0 "Californian People's United Republic"
+  CAL_SCA_Puppet_DEF:0 "the Californian Fe People's United Republic"
+  CAL_SCA_Puppet_ADJ:0 "Californian"
+
 
 
 
