--- a/localisation/english/PB_SCA_l_english.yml
+++ b/localisation/english/PB_SCA_l_english.yml
@@ -642,7 +642,7 @@
   SCA_The_Washington_Monument_desc:0 "Even though our Revolution seeks to fix the problems of the present to secure a brighter future, we cannot forget the past. It holds clues for our victory and an identity for our people. The first Continental army was filled with many important figures, but none were as prominent as George Washington. The man who tried to lead us to freedom. Though he failed, and the East remains under the yoke of British Dominion, we cannot forget his sacrifices. He laid the groundwork for our new Revolution, his ideals of liberty and freedom inspire us to this day. He shall be honoured here and forever more as a champion of the people!"
 
 
-  SCA_Heros_Of_The_Revolution:0 "Heros Of The Revolution"
+  SCA_Heros_Of_The_Revolution:0 "Heroes Of The Revolution"
   SCA_Heros_Of_The_Revolution_desc:0 ""
 
   SCA_Hush_Campaigns:0 "Hush Campaigns"
@@ -1352,6 +1352,14 @@
   CAL_SCA_Puppet:0 "Californian People's United Republic"
   CAL_SCA_Puppet_DEF:0 "the Californian Fe People's United Republic"
   CAL_SCA_Puppet_ADJ:0 "Californian"
+
+  RGD_SCA_Puppet:0 "Rio Grande People's United Republic"
+  RGD_SCA_Puppet_DEF:0 "the Rio Grande People's United Republic"
+  RGD_SCA_Puppet_ADJ:0 "Rio Grande"
+
+  MEX_SCA_Puppet:0 "Mexican People's United Republic"
+  MEX_SCA_Puppet_DEF:0 "the Mexican People's United Republic"
+  MEX_SCA_Puppet_ADJ:0 "Mexican"
 
 
 
