--- a/localisation/english/PB_factions_l_english.yml
+++ b/localisation/english/PB_factions_l_english.yml
@@ -39,6 +39,9 @@
   FACTION_GLOBAL_REVOLUTIONARY_FRONT:0 "§YMember of the Global Revolutionary Front§!"
   FACTION_GLOBAL_REVOLUTIONARY_FRONT_LONG:0 "This nation is a member of the §YGlobal Revolutionary Front§!, a military alliance between the [JAP.GetName] and the [SCA.GetName]. Originally just an alliance consisting of Japan and her Jacobin allies the Pan-Asian National Revolutionary Front has now become known as the Global Revolutionary Front, an global spanning faction dedicated to spreading the revolutionary cause through war, subversion, and espionage."
 
+  FACTION_CMEA:0 "§YMember of the C.M.E.A§!"
+  FACTION_CMEA_LONG:0 "This nation is a member of the §YCouncil of Mutual Economc Assistance§!, an economic alliance created by America in the hopes of improving the standard of living for all jacobins across the world. The C.M.E.A is responsible for external trade between America, diplomatic affairs, and some military operations."
+
   FACTION_UNITED_EMIRATES:0 "§YMember of the United Arab Emirates§!"
   FACTION_UNITED_EMIRATES_LONG:0 "This nation is a member of the §YUnited Arab Emirates§!, or al-'Imārāt al-'Arabīyyah al-Muttahidah, a union of Arab states formed following their emacipation from the Ottoman Empire in 1925. Rather than being a conventional military alliance, the United Emirates functions more like a Confederation of nations akin to the former Holy Roman Empire. Emirs are de-facto vassals of the Emir of Mecca and Hejaz, but in practice they are given significant autonomy due to tribal and dynastic rivalries. While this system has bought stability, it has also precipitated conflict between the Arab tribal dynasties over the perpetual re-elections of the Hashemites."
 
