--- a/localisation/english/core_l_english.yml
+++ b/localisation/english/core_l_english.yml
@@ -619,8 +619,8 @@
  NAVAL_COMBAT_SHIP_ORGANIZATION_FACTOR:0 " - Organization: $ORG|%Y$"
  NAVAL_COMBAT_SHIP_STRENGTH_DESC:0 "Strength represents how much damage a ship can take before being destroyed"
  NAVAL_COMBAT_INCOMING_UNKNOWN:0 "§RUnknown ships are incoming.§!"
- NAVAL_COMBAT_AIRWING_TOOLTIP_HEADER:1 "\n====================\n$NUM|G$/$TOT|G$ x $MOD|Y$ from $FROM|Y$ ($DEAD|R$ shot down)."
- NAVAL_COMBAT_AIRWING_TOOLTIP_HEADER_EXTERNAL:0 "\n====================\n$HOUR|Y$ hours ago $NUM|G$ of $MOD|Y$ came from $FROM|Y$. $DEAD|R$ was shot down by the enemy."
+ NAVAL_COMBAT_AIRWING_TOOLTIP_HEADER:3 "$NUM|G$/$TOT|G$ $MOD|Y$ from $FROM|Y$. $DEAD|R$ shot down."
+ NAVAL_COMBAT_AIRWING_TOOLTIP_HEADER_EXTERNAL:2 "$NUM|G$ $MOD|Y$ from $FROM|Y$. Joined $HOUR|Y$ hours ago. $DEAD|R$ shot down."
  NAVAL_COMBAT_AIRWING_TOOLTIP_SHOT_DOWN:0 "\nShot down:"
  NAVAL_COMBAT_AIRWING_TOOLTIP_SHOT_DOWN_ENTRY:2 "\n   $NUM|G$ x $MOD|Y$"
  NAVAL_COMBAT_AIRWING_TOOLTIP_DAMAGED:1 "\nEnemy ships damaged:"
@@ -672,7 +672,7 @@
  AIRVIEW_DETAILS_CHANNEL_6:1 "Our support lost: $VAL|R0$"
  AIRVIEW_DETAILS_CHANNEL_7:3 "Our transports lost: $VAL|R0$"
  AIRVIEW_DETAILS_CHANNEL_8:3 "Our bombers disrupted: $VAL|R1$"
- AIRVIEW_DETAILS_CHANNEL_9:3 "Our trains lost: $VAL|R1$"
+ AIRVIEW_DETAILS_CHANNEL_9:4 "Our trains lost: $VAL|R0$"
  AIRVIEW_DETAILS_CHANNEL_10:3 "Our trucks lost: $VAL|R1$"
  AIRVIEW_DETAILS_CHANNEL_11:4 "Our railway guns lost: $VAL|R1$"
  AIRVIEW_DETAILS_CHANNEL_12:3 "Enemy buildings bombed: $VAL|G1$"
@@ -683,7 +683,7 @@
  AIRVIEW_DETAILS_CHANNEL_17:0 "Enemy support lost: $VAL|G0$"
  AIRVIEW_DETAILS_CHANNEL_18:0 "Enemy transports lost: $VAL|G0$"
  AIRVIEW_DETAILS_CHANNEL_19:0 "Enemy bombers disrupted: $VAL|G1$"
- AIRVIEW_DETAILS_CHANNEL_20:0 "Enemy trains lost: $VAL|G1$"
+ AIRVIEW_DETAILS_CHANNEL_20:1 "Enemy trains lost: $VAL|G0$"
  AIRVIEW_DETAILS_CHANNEL_21:0 "Enemy trucks lost: $VAL|G1$"
  AIRVIEW_DETAILS_CHANNEL_22:0 "Enemy railway guns lost: $VAL|G1$"
  AIRVIEW_GRAPH_VALUE:0 "$VALUE|1$"
@@ -707,12 +707,12 @@
  NAVAL_DETECTION_CHANCE_DETAILS_SURF_DET:0 " x Equipment Surface Detection: $VAL|0%+$"
  NAVAL_DETECTION_CHANCE_DETAILS_SUB_DET:0 " x Equipment Sub Detection: $VAL|0%+$"
  NAVAL_DETECTION_CHANCE_DETAILS_TRUE_VAL:0 "§gTrue detection chance also depends on enemy ships visibility.§!"
- SPOTTING_BASE_CHANCE_TOTAL:0 "§HBase detection in region: $VAL|0%+$§!\n"
- SPOTTING_BASE_CHANCE:0 "  Base: $VAL|0%+=$\n"
- SPOTTING_BASE_CHANCE_FROM_NAVY:0 "  Task Forces in Region: $VAL|0%+=$\n"
- SPOTTING_BASE_CHANCE_FROM_AIR:0 "  Air Superiority in Region: $VAL|0%+=$\n"
- SPOTTING_BASE_CHANCE_FROM_RADAR:0 "  Radar Coverage in Region: $VAL|0%+=$\n"
- SPOTTING_BASE_CHANCE_FROM_DECRYPTION:1 "  Intel Difference: $VAL|0%+=$\n"
+ SPOTTING_BASE_CHANCE_TOTAL:1 "§HBase detection in region: $VAL|1%+$§!\n"
+ SPOTTING_BASE_CHANCE:1 "  Base: $VAL|1%+=$\n"
+ SPOTTING_BASE_CHANCE_FROM_NAVY:1 "  Task Forces in Region: $VAL|1%+=$\n"
+ SPOTTING_BASE_CHANCE_FROM_AIR:1 "  Air Missions in Region: $VAL|1%+=$\n"
+ SPOTTING_BASE_CHANCE_FROM_RADAR:1 "  Radar Coverage in Region: $VAL|1%+=$\n"
+ SPOTTING_BASE_CHANCE_FROM_DECRYPTION:2 "  Intel Difference: $VAL|1%+=$\n"
  NAVAL_SPOTTING_SPEED_SURFACE:0 "Spotting: $VAL|2%+=$"
  NAVAL_SPOTTING_SPEED_SUB:0 "Sub surface spotting speed: $VAL|2%+=$"
  NAVAL_SPOTTING_SURFACE_DETECTION:0 "Surface detection: $VAL|2%+$"
@@ -723,7 +723,7 @@
  NAVAL_SPOTTING_DUE_TO_SPEED_DELTA:0 "Speed difference: $VAL|2%+=$"
  NAVAL_SPOTTING_COORDINATION_FACTOR:0 "Coordination: $VAL|0%H$"
  NAVAL_SPOTTING_STATE:0 "There are §Y$NUM$§! undetected ships\n"
- SPOTTING_DETECTION_PROCESS_PER_TASK_FORCE:0 "  $NAME$: $VAL|0%+$ ($TARGET$)\n"
+ SPOTTING_DETECTION_PROCESS_PER_TASK_FORCE:1 "  $NAME$: Progress $VAL|0%+$ Encounter Chance $CHANCE|1%+$ ($TARGET$)\n"
  NAVAL_SPOTTING_LEVEL_NONE_DESC:0 "We know of an enemy presence in the region."
  NAVAL_SPOTTING_LEVEL_LOW_DESC:0 "We spotted the enemy and have a rough estimate of their forces"
  NAVAL_SPOTTING_LEVEL_MEDIUM_DESC:0 "We spotted the enemy and have a clear estimate of their forces"
@@ -758,14 +758,14 @@
  UNIT_VIEW_DIVISIONS_COUNT_NO_LIMIT:0 "$DIV$"
  UNIT_TOOLTIP_BATTALIONS:1 "§GBattalions§!"
  UNIT_TOOLTIP_SUPPORT:0 "§GSupport§!"
- MAP_ARROWS_LOCALIZATION:0 "$DIVISIONS$ - $GROUP$"
+ MAP_ARROWS_LOCALIZATION:1 "$ORDERNAME$$DIVISIONS$ - $GROUP$"
  MAP_ARROWS_LOCALIZATION_EMPTY:0 "No divisions"
- MAP_ARROWS_DIVISIONS_COUNT:0 "$DIV$ Divisions"
- MAP_ARROWS_DIVISIONS_COUNT_SHORT:0 "$DIV$ Divs."
- MAP_ARROWS_LOCALIZATION_EMPTY_SHORT:0 "No Divs."
- MAP_ARROWS_PARATROOPERS_COUNT:0 "$DIV$ Paratroopers"
- MAP_ARROWS_INVASION_TRANSPORTS_COUNT:0 " $TR$ Transports"
- MAP_ARROWS_PARADROP_TRANSPORTS_COUNT:0 " $TR$ Transports"
+ MAP_ARROWS_DIVISIONS_COUNT:1 "$DIV$ Divs"
+ MAP_ARROWS_DIVISIONS_COUNT_SHORT:1 "$DIV$ Divs"
+ MAP_ARROWS_LOCALIZATION_EMPTY_SHORT:1 "No Divs"
+ MAP_ARROWS_PARATROOPERS_COUNT:1 "$DIV$ Paras"
+ MAP_ARROWS_INVASION_TRANSPORTS_COUNT:1 " - $TR$ Transports"
+ MAP_ARROWS_PARADROP_TRANSPORTS_COUNT:1 " - $TR$ Transports"
  REQUEST_EXPEDITIONARIES_DIVISIONS_COUNT:0 "$NUM_DIVS|Y$ Total Divisions"
  UNITS_VIEW_DIVISIONS_COUNT:0 "$DIV|G$ Divisions"
  UNITS_VIEW_WINGS_COUNT:0 "$WINGS|G$ Selected"
@@ -1129,6 +1129,7 @@
  MOVEMENT_SPEED_DESC:0 "Speed: $VALUE|H$ km/h\nBase: $BASE|H$ km/h"
  COMBAT_SPEED_MODIFIER:1 "In Combat: x$VALUE|H%$"
  TERRAIN_SPEED_MODIFIER:2 "$NAME$: $VALUE|+=%$"
+ FORT_SPEED_MODIFIER:0 "Fort: $VALUE|+=%$"
  RIVER_MODIFIER:1 "River: $VALUE|+=%$"
  LARGE_RIVER_MODIFIER:1 "Large river: $VALUE|+=%$"
  AIR_SUPERIORITY_SPEED_MODIFIER:1 "Air superiority: $VALUE|+=%$"
@@ -1923,3 +1924,28 @@
  CP_OC_PARTIAL:0 "This value reduces our maximum Command Power, which can be found in the top bar."
  CAN_BE_BUILT_IN_ALLIED_TERRITORY:0 "\n§GThis building can be constructed in allied territory.§!"
  NOT_ENOUGH_CP_TO_PROMOTE_ADVISOR:0 "£trigger_no£ We do not have the required $COST|0R$ £command_power"
+ REMOTE_STORAGE_WARNING_TITLE:0 "Saving on Cloud went wrong"
+ REMOTE_STORAGE_WARNING_DESC:0 "Something went wrong when saving on cloud.\nYour game is NOT saved. Please check you are connected to internet and there is enough cloud storage space."
+ REMOTE_STORAGE_USAGE:0 "Space left on Cloud: $VALUE$ / $TOTAL$"
+ DIVISION_COMMANDER_CLICK_TO_GOTO:0 "§G Right-Click§! to pan to this division."
+ ARMY_BUTTON_DIV_COMMAND_TOOLTIP_LEADER:0 "$ARMY_NAME|H$\n$LEADER$"
+ ARMY_BUTTON_DIV_COMMAND_TOOLTIP_NO_LEADER:0 "$ARMY_NAME|H$\nNo Commander"
+ COHESION:0 "Cohesion"
+ PLAN_COHESION_LOOSE_TITLE:0 "§HFlexible Cohesion§!"
+ PLAN_COHESION_LOOSE_DESC:0 "Divisions will relocate from long distances in order to maintain a battle line."
+ PLAN_COHESION_BALANCED_TITLE:0 "§HBalanced Cohesion§!"
+ PLAN_COHESION_BALANCED_DESC:1 "Divisions will only relocate from medium distances in order to maintain a battle line."
+ PLAN_COHESION_STRICT_TITLE:0 "§HRigid Cohesion§!"
+ PLAN_COHESION_STRICT_DESC:1 "Divisions will only relocate from very short distances in order to maintain a battle line.\n\n§RThis setting is not suitable for sparsely populated or rapidly changing frontlines - close attention is required.§!"
+ PLAN_COHESION_MODE:0 "Set Cohesion Mode"
+ UNIT_LEADER_NEW_LEADER_DIVC:0 "Show Field Commanders"
+ PLANE_COUNTS_IN_REGION:0 "$COUNTS$"
+ PLANE_COUNTS_PASSING_THROUGH_REGION:0 " ($COUNTS$)"
+ PLANES_IN_REGION_SUBTITLE:0 "§HPlanes in Region§!\n"
+ PLANES_PASSING_THROUGH_REGION:0 "\n§HPlanes Passing Through Region§!\n"
+ OPEN_COUNTRY_LOGISTICS:0 "Open Logistics"
+ DIVISION_COMMANDER_DESCRIPTION_TEXT:0 "§HField Officers§! are the officers in charge of your divisions. Their division can perform various combat acts for which they can be awarded honors conferring benefits. Additionally, the officer can earn stored experience and personality traits while commanding their division, which will be applied if they are promoted to an army general."
+ BASE_CONTRIBUTION:0 "\nBase Value: $VALUE|H%$\n"
+ LOGISTICS_ONLY_FOR_ALLIES:0 "We can only view the logistics menu for faction members or subjects."
+ TRAINING_ACCIDENT:0 "a training accident"
+ SUNK_BY_MINES:0 "mines"
