--- a/localisation/english/PB_SCA_l_english.yml
+++ b/localisation/english/PB_SCA_l_english.yml
@@ -106,6 +106,11 @@
   PB_SCA_Low_Popular_Support:0 "Low Popular Support"
   PB_SCA_Average_Popular_Support:0 "Average Popular Support"
   PB_SCA_High_Popular_Support:0 "High Popular Support"
+  
+  PB_SCA_Ministry_Of_The_Exterior:0 "Ministry Of The Exterior"
+  PB_SCA_Ministry_Of_The_Exterior_2:0 "Ministry Of The Exterior"
+
+  PB_SCA_Paying_For_Land_Purchases:0 "Paying For Land Purchases"
 
   ##########################
   # TECHNICAL TEAMS
@@ -142,6 +147,12 @@
   PB_SCA_Boston_Industries:0 "Boston Industries"
   PB_Boston_Industries:0 "Boston Industries"
   PB_Boston_Industries_desc:0 ""
+
+  ##########################
+  # ABILITIES
+  ##########################
+
+  SCA_force_attack:0 "Death Before Defeat"
 
   ##########################
   # DECISIONS/MISSIONS/DEBUG
@@ -1330,6 +1341,45 @@
   SCA37title:0 "A Bottle A Day"
   SCA37desc:0 "Even though Jacob was warned of the potentially life-threatening effects of his alcoholism by his brother, any hope of pulling the man away from a bottle of rum was seemingly impossible. Every day at around late noon Jacob would disappear into the local saloon for hours only to remerge barely functional, a walking corpse with a belly full of beer. Only on a few occasions did he spare the time to take a break from the poison that was ruining his life, although the where abouts of Jacob during such times remained a mystery until one early Sunday morning. Down a busy street amongst the foolery of Continental troops returning from battle could one see Jacob, passing a few notes to a munitions guard in return for an unknown object. It would later be revealed that Jacob had, by some way, managed to obtain a barely conceivable image of his family back in Philadelphia. What strings Jacob had to pull just to get such an object through the United Commonwealth, let alone in Continental hands has been left up to speculation. Unfortunately, a few days later Jacob had committed suicide after finding out from Continental troops stationed within the town that both his wife and two daughters hadn’t made it through the chaos of the trek west, and that more than likely they had died during the Mississippi river crossing. " 
   SCA37opta:0 "Keeps the doctor away."
+
+  SCA38title:0 "The Rio Grande Occupation Question"
+  SCA38desc:0 "" 
+  SCA38opta:0 "We own these lands now."
+  SCA38optb:0 "Establish a loyal revolutionary regime."
+
+  SCA39title:0 "The Mexico Occupation Question"
+  SCA39desc:0 "" 
+  SCA39opta:0 "We own these lands now."
+  SCA39optb:0 "Establish a loyal revolutionary regime."
+  SCA39optb:0 "Establish a loyal revolutionary regime and give them Baja California."
+
+  SCA40title:0 "An Offer From Afar"
+  SCA40desc:0 "" 
+  SCA40opta:0 "Yes."
+  SCA40optb:0 "No."
+
+  SCA41title:0 "A Successful Endeavour"
+  SCA41desc:0 "" 
+  SCA41opta:0 "For the revolutionary cause!"
+
+  SCA42title:0 "Rejected and ridiculed"
+  SCA42desc:0 "" 
+  SCA42opta:0 "Blast!"
+
+  SCA43title:0 "An Offer From Afar"
+  SCA43desc:0 "" 
+  SCA43opta:0 "Yes."
+  SCA43optb:0 "No."
+
+  SCA44title:0 "A Successful Endeavour"
+  SCA44desc:0 "" 
+  SCA44opta:0 "For the revolutionary cause!"
+
+  SCA45title:0 "Rejected and ridiculed"
+  SCA45desc:0 "" 
+  SCA45opta:0 "Blast!"
+
+
 
   ##########################
   # PUPPETS/AUTONOMIES
