--- a/localisation/english/victory_points_l_english.yml
+++ b/localisation/english/victory_points_l_english.yml
@@ -479,7 +479,7 @@
  VICTORY_POINTS_1827:0 "Denver"
  VICTORY_POINTS_1836:0 "Bismarck"
  VICTORY_POINTS_1843:0 "Miami"
- VICTORY_POINTS_1866:0 "Minneapolis"
+ VICTORY_POINTS_1866:0 "Bde Óta Othúŋwe"
  VICTORY_POINTS_3960:0 "Istres"
  VICTORY_POINTS_4569:0 "St.Louis"
  VICTORY_POINTS_4860:0 "Tonkaliwako"
@@ -701,6 +701,9 @@
  VICTORY_POINTS_3463:0 "Exeter"
  VICTORY_POINTS_11253:0 "Cambridge"
  VICTORY_POINTS_11297:0 "Hull"
+ VICTORY_POINTS_9713:0 "Sacramento"
+ VICTORY_POINTS_4607:0 "Ciudad Tahoe"
+ VICTORY_POINTS_4799:0 "Rivera"
  VICTORY_POINTS_11435:0 "Bitburg"
  VICTORY_POINTS_12674:0 "Reykjavik"
  VICTORY_POINTS_11746:0 "Adana"
@@ -981,8 +984,8 @@
  VICTORY_POINTS_3605:0 "Frontenac"
  VICTORY_POINTS_9585:0 "Orillia"
  VICTORY_POINTS_13276:0 "Manti"
- VICTORY_POINTS_12134:0 "Brigham"
- VICTORY_POINTS_7721:0 "New Jordan"
+ VICTORY_POINTS_12134:0 "New Jordan"
+ VICTORY_POINTS_7721:0 "Brigham"
  VICTORY_POINTS_11698:0 "Humility"
  VICTORY_POINTS_505:0 "Gangkou"
  VICTORY_POINTS_11495:0 "Hóngyè"
@@ -993,7 +996,7 @@
  VICTORY_POINTS_10690:0 "Gadsdenville"
  VICTORY_POINTS_10327:0 "Freetown"
  VICTORY_POINTS_10606:0 "Kelly"
- VICTORY_POINTS_12024:0 "Granger"
+ VICTORY_POINTS_12024:0 "Jefferson City"
  VICTORY_POINTS_801:0 "Silent Hill"
  VICTORY_POINTS_905:0 "Arkham"
  VICTORY_POINTS_12459:0 "Derry"
@@ -1016,3 +1019,7 @@
  VICTORY_POINTS_4507:0 "Lafayette"
  VICTORY_POINTS_12401:0 "Caddoville"
  VICTORY_POINTS_1559:0 "Miro"
+ VICTORY_POINTS_11971:0 "Hpahúska"
+ VICTORY_POINTS_1527:0 "Peouaroua"
+ VICTORY_POINTS_10478:0 "Peouaroua"
+ VICTORY_POINTS_10640:0 "Acadia"
