A lot of lot sutffff

--- a/localisation/english/state_names_l_english.yml
+++ b/localisation/english/state_names_l_english.yml
@@ -70,7 +70,7 @@
  STATE_69:0 "Sudetenland"
  STATE_70:0 "Pressburg"
  STATE_71:0 "Eperiese"
- STATE_72:0 "East-Central Australia"
+ STATE_72:0 "North Queensland"
  STATE_73:0 "Karpatenruthenen"
  STATE_74:0 "Eastern Sudetenland"
  STATE_75:0 "Moravia"
@@ -372,7 +372,7 @@
  STATE_371:0 "Louisiane"
  STATE_372:0 "Arcansas"
  STATE_373:0 "Jackson"
- STATE_374:0 "Oclehumme"
+ STATE_374:0 "Numunuu"
  STATE_375:1 "West Texas"
  STATE_376:0 "Kiowa"
  STATE_377:0 "Apacheria"
@@ -905,7 +905,7 @@
  STATE_903:0 "Iturbide Mountains"
  STATE_904:0 "Freedonia"
  STATE_905:0 "Santa Anna"
- STATE_906:0 "Brigham"
+ STATE_906:0 "Ti'tsa-pa"
  STATE_907:0 "West Rio Grande"
  STATE_908:0 "East Iturbides"
  STATE_909:0 "West-Rhineland"
