--- a/localisation/english/state_names_l_english.yml
+++ b/localisation/english/state_names_l_english.yml
@@ -332,7 +332,7 @@
  STATE_331:0 "Newfoundland"
  STATE_332:0 "Labrador"
  STATE_333:1 "North Borneo"
- STATE_334:1 "Kalimantan"
+ STATE_334:1 "Eastern Kalimantan"
  STATE_335:0 "Java"
  STATE_336:0 "Malaya"
  STATE_337:0 "Faroe Islands"
@@ -790,7 +790,7 @@
  STATE_789:0 "Australien Desert"
  STATE_790:0 "Capricorn"
  STATE_791:0 "Neu-Schlesien"
- STATE_792:0 "Darling"
+ STATE_792:0 "Western Kalimantan"
  STATE_793:0 "Aleutian Islands"
  STATE_794:0 "Lika"
  STATE_795:0 "Schleswig"
