more ? yes more

--- a/localisation/english/victory_points_l_english.yml
+++ b/localisation/english/victory_points_l_english.yml
@@ -679,7 +679,9 @@
  VICTORY_POINTS_6973:0 "La Spezia"
  VICTORY_POINTS_6984:0 "Baltimore"
  VICTORY_POINTS_7132:0 "Oran"
- VICTORY_POINTS_7371:0 "Kuching"
+ VICTORY_POINTS_1208:0 "Kuching"
+ VICTORY_POINTS_10199:0 "Sandakan"
+ VICTORY_POINTS_7371:0 "Miri"
  VICTORY_POINTS_7617:0 "Colón"
  VICTORY_POINTS_7940:0 "Golmud"
  VICTORY_POINTS_7960:0 "Abu Dhabi"
