--- a/localisation/english/PB_News_Events_l_english.yml
+++ b/localisation/english/PB_News_Events_l_english.yml
@@ -910,6 +910,11 @@
   PBNews.230.d:0 "The Second Continental Army has revealed itself to the world and more importantly to the United Commonwealth. Butler announced in a short speech soon after that the SCA was to embark on a great campaign that would see the ultimate destruction of capitalism from the North American continent. An official declaration of war would quickly follow Butler's speech, dubbed the Reclamation War by Butler and his followers. The question now is who exactly will win the revolution, and whether such an event would see Britain expelled from North America once and for all. "
   PBNews.230.a:0 "Death before dishonour."
 
+  PBNews.231.t:0 "FRONTIER AUTHORITY COLLAPSES"
+  PBNews.231.d:0 "Reports coming from the American frontier echoe disturbing tales of an encroaching threat eastwards and towards the United Commonwealth. Some have stated that this apparent threat is nothing more than a lie mustered by wild west nations to add reason for their now openly hostile relations against one another. Others have said that this threat is in fact real and should be taken seriously. Whatever the case, the once peaceful nature of the Frontier has quickly changed to one of hostility. The question now remains as to who will be left standing?"
+  PBNews.231.a:0 "Who? What? When?"
+
+
 
 
 
