--- a/localisation/english/PB_Generic_Decisions_l_english.yml
+++ b/localisation/english/PB_Generic_Decisions_l_english.yml
@@ -125,11 +125,11 @@
 
   OBW_Has_Researched_Crew_Quarters_tt:0 "Has researched the §YCrew Quarters Compartment§! component"
 
-  OBW_Has_50_RP_tt:0 "Has at least 50£research_points_small §CRsearch Points§!"
-  OBW_Has_75_RP_tt:0 "Has at least 75£research_points_small §CRsearch Points§!"
-  OBW_Has_100_RP_tt:0 "Has at least 100£research_points_small §CRsearch Points§!"
-  OBW_Has_125_RP_tt:0 "Has at least 125£research_points_small §CRsearch Points§!"
-  OBW_Has_150_RP_tt:0 "Has at least 150£research_points_small §CRsearch Points§!"
+  OBW_Has_50_RP_tt:0 "Has at least 50£research_points_small §CResearch Points§!"
+  OBW_Has_75_RP_tt:0 "Has at least 75£research_points_small §CResearch Points§!"
+  OBW_Has_100_RP_tt:0 "Has at least 100£research_points_small §CResearch Points§!"
+  OBW_Has_125_RP_tt:0 "Has at least 125£research_points_small §CResearch Points§!"
+  OBW_Has_150_RP_tt:0 "Has at least 150£research_points_small §CResearch Points§!"
 
   OBW_Has_50_RP_cost_tt:0 "§C50§!£research_points_small"
   OBW_Has_50_RP_cost_tt_blocked:0 "§C50§!£research_points_small"
