--- a/localisation/english/PB_peace_popup_l_english.yml
+++ b/localisation/english/PB_peace_popup_l_english.yml
@@ -18,7 +18,7 @@
 
  #Wars that have finished
 
- PB_PEACE_POPUP_WAR_CONCLUSION_MALAYA_LOSS:0 "The §YMalayisan Insurgency§! has been crushed [winning_country.GetFlag] with the §Y[winning_country.GetNameDef]§![GetWinnerAllies] defeating the [losing_country.GetFlag] §Y[losing_country.GetNameDef]§![GetLoserAllies]."
+ PB_PEACE_POPUP_WAR_CONCLUSION_MALAYA_LOSS:0 "The §YMalayisan Insurgency§! has been crushed with the [winning_country.GetFlag] §Y[winning_country.GetNameDef]§![GetWinnerAllies] defeating the [losing_country.GetFlag] §Y[losing_country.GetNameDef]§![GetLoserAllies]."
  PB_PEACE_POPUP_WAR_CONCLUSION_MALAYA_VICTORY:0 "The §YMalayisan Insurgency§! has been victorious with the [winning_country.GetFlag] §Y[winning_country.GetNameDef]§![GetWinnerAllies] defeating the [losing_country.GetFlag] §Y[losing_country.GetNameDef]§![GetLoserAllies]."
  PB_PEACE_POPUP_WAR_CONCLUSION_ICA_LOSS:0 "The [winning_country.GetFlag] §Y[winning_country.GetNameDef]§![GetWinnerAllies] have defeated the [losing_country.GetFlag] §Y[losing_country.GetNameDef]§![GetLoserAllies] and restored order in the British Isles."
  PB_PEACE_POPUP_WAR_CONCLUSION_MON_LOSS:0 "The [winning_country.GetFlag] §Y[winning_country.GetNameDef]§![GetWinnerAllies] have defeated the [losing_country.GetFlag] §Y[losing_country.GetNameDef]§![GetLoserAllies] and established a loyal regime in the Eurasian steppes."
